custom/k8s-scaler/spec.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: scaler

---
apiVersion: v1
kind: Service
metadata:
  name: k8s-scaler
  namespace: scaler
spec:
  selector:
    app: k8s-scaler
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443

---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: k8s-scaler
webhooks:
  - name: limits.create.pods.k8s-scaler
    rules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE"]
        resources: ["pods"]
    clientConfig:
      service:
        name: k8s-scaler
        namespace: scaler
        path: "/mutate/pod-limits"
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURTRENDQWpDZ0F3SUJBZ0lVR1VHQ3JsZmo0ZUFOUmhsaG9vV2hmdXNITThNd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0lERWVNQndHQTFVRUF3d1Zhemh6TFhOallXeGxjaTV6WTJGc1pYSXVjM1pqTUI0WERUSTFNRFV5TlRFegpNakEwTUZvWERUTTFNRFV5TXpFek1qQTBNRm93SURFZU1Cd0dBMVVFQXd3VmF6aHpMWE5qWVd4bGNpNXpZMkZzClpYSXVjM1pqTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUFyZ1hneE1kaXkveUUKdzR5TFB4bjBJdE9Mbi90bDdIRW9weVFleGhta1B4b1BOdDRHNG1aSDlkTHhsRlZ1UkJzZ0YwZ2ZDamwrbEtjbApzSTV0cU5va0d [...]
    admissionReviewVersions: ["v1"]
    sideEffects: None

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-scaler
  namespace: scaler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-scaler
  template:
    metadata:
      labels:
        app: k8s-scaler
    spec:
      containers:
        - name: webhook
          image: aphan1um/k8s-python
          ports:
            - containerPort: 443
          volumeMounts:
            - mountPath: /app
              name: appcode
            - name: certs
              mountPath: /app/certs
              readOnly: true
          command:
            - "uvicorn"
          args:
            - "main:app"
            - "--host"
            - "0.0.0.0"
            - "--port"
            - "443"
            - "--ssl-keyfile"
            - "certs/tls.key"
            - "--ssl-certfile"
            - "certs/tls.crt"
      volumes:
      - name: appcode
        emptyDir: {}
      - name: certs
        secret:
          secretName: k8s-scaler-cert
